--- a/src/Application/src/RazorPagesTestSample/RazorPagesTestSample.csproj
+++ b/src/Application/src/RazorPagesTestSample/RazorPagesTestSample.csproj
@@ -9,4 +9,10 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.8" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Dockerfile">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
