--- a/.github/workflows/deploy-dotnet.yml
+++ b/.github/workflows/deploy-dotnet.yml
@@ -85,7 +85,9 @@ jobs:
       - name: 'Login via Azure CLI'
         uses: azure/login@v2.1.1
         with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
       - uses: azure/webapps-deploy@v2
         with:
@@ -106,7 +108,9 @@ jobs:
     - name: 'Login via Azure CLI'
       uses: azure/login@v2.1.1
       with:
-        creds: ${{ secrets.AZURE_CREDENTIALS }}
+        client-id: ${{ secrets.AZURE_CLIENT_ID }}
+        tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+        subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
     - uses: azure/webapps-deploy@v2
       with:
@@ -127,7 +131,9 @@ jobs:
     - name: 'Login via Azure CLI'
       uses: azure/login@v2.1.1
       with:
-        creds: ${{ secrets.AZURE_CREDENTIALS }}
+        client-id: ${{ secrets.AZURE_CLIENT_ID }}
+        tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+        subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
     - uses: azure/webapps-deploy@v2
       with:
