--- a/.github/workflows/deploy-dotnet.yml
+++ b/.github/workflows/deploy-dotnet.yml
@@ -88,6 +88,7 @@ jobs:
           client-id: ${{ secrets.AZURE_CLIENT_ID }}
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+          enable-AzPSSession: true
 
       - uses: azure/webapps-deploy@v2
         with:
