--- a/.github/workflows/deploy-dotnet.yml
+++ b/.github/workflows/deploy-dotnet.yml
@@ -74,8 +74,9 @@ jobs:
       run: docker push $registryName/$repositoryName:$tag
 
   deploy-to-dev:
-  
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write
     needs: dockerBuildPush
     environment:
       name: dev
@@ -88,6 +89,7 @@ jobs:
           client-id: ${{ secrets.AZURE_CLIENT_ID }}
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+          enable-AzPSSession: true
 
       - uses: azure/webapps-deploy@v2
         with:
