--- a/src/Application/src/RazorPagesTestSample/appsettings.json
+++ b/src/Application/src/RazorPagesTestSample/appsettings.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ApplicationInsights": {
+    "ConnectionString": "InstrumentationKey=c8c9aed8-100a-4475-9ea0-9bb7aa530cc2;IngestionEndpoint=https://eastus2-3.in.applicationinsights.azure.com/;LiveEndpoint=https://eastus2.livediagnostics.monitor.azure.com/;ApplicationId=aa1d5e95-f62e-48f8-82d0-fc6c37068712"
+  }
 }
