--- a/.github/workflows/build-dotnet.yml
+++ b/.github/workflows/build-dotnet.yml
@@ -1,4 +1,4 @@
-name: Build Razor .Net App to Dev, Test, and Prod Azure App Service
+name: Build and Test .Net App to Dev, Test, and Prod Azure App Service
 
 env:
   registryName: 6m5h7lwxxtw2ampnpreg.azurecr.io
@@ -16,7 +16,7 @@ on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 jobs:
-  build:
+  build-test:
     runs-on: ubuntu-latest
 
     steps:
@@ -31,7 +31,7 @@ jobs:
     - name: Build
       run: dotnet build --no-restore ./src/Application/src/RazorPagesTestSample/RazorPagesTestSample.csproj
     - name: Test
-      run: dotnet test --no-build --verbosity normal ./src/Application/tests/RazorPagesTestSample.Tests/RazorPagesTestSample.Tests.csproj
+      run: dotnet test --verbosity normal ./src/Application/src/RazorPagesTestSample.Tests/RazorPagesTestSample.Tests.csproj
     - uses: actions/github-script@v6
       if: failure()
       with:
