--- a/.github/workflows/deploy-dotnet.yml
+++ b/.github/workflows/deploy-dotnet.yml
@@ -1,4 +1,4 @@
-name: Deploy Razor .Net App to Dev, Test, and Prod Azure App Service
+name: Deploy .Net App to Dev, Test, and Prod Azure App Service
 
 env:
   registryName: 6m5h7lwxxtw2ampnpreg.azurecr.io
@@ -12,7 +12,7 @@ on:
     paths: src/Application/**
   workflow_dispatch:
 jobs: 
-  build:
+  build-test:
     runs-on: ubuntu-latest
 
     steps:
@@ -29,7 +29,7 @@ jobs:
 
   dockerBuildPush:
     runs-on: ubuntu-latest
-    needs: build
+    needs: build-test
 
     steps:
     - uses: actions/checkout@v3
