--- a/.github/workflows/build-dotnet.yml
+++ b/.github/workflows/build-dotnet.yml
@@ -1,4 +1,4 @@
-name: Build Razor .Net App to Dev, Test, and Prod Azure App Service
+name: Build and Test .Net App to Dev, Test, and Prod Azure App Service
 
 env:
   registryName: 6m5h7lwxxtw2ampnpreg.azurecr.io
@@ -16,7 +16,7 @@ on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 jobs:
-  build:
+  build-test:
     runs-on: ubuntu-latest
 
     steps:
@@ -31,14 +31,14 @@ jobs:
     - name: Build
       run: dotnet build --no-restore ./src/Application/src/RazorPagesTestSample/RazorPagesTestSample.csproj
     - name: Test
-      run: dotnet test --no-build --verbosity normal ./src/Application/src/RazorPagesTestSample.Tests/RazorPagesTestSample.Tests.csproj
+      run: dotnet test --verbosity normal ./src/Application/src/RazorPagesTestSample.Tests/RazorPagesTestSample.Tests.csproj
     - uses: actions/github-script@v6
       if: failure()
       with:
         github-token: ${{secrets.GITHUB_TOKEN}}
         script: |
           let body = "${{ env.build_name }} Workflow Failure \n Build Number: ${{ github.run_number }} \n Build Log: https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }} \n SHA: [${{ github.sha }}](https://github.com/${{ github.repository }}/commit/${{ github.sha }}) \n";
-          github.issues.create({
+          github.rest.issues.create({
             owner: context.repo.owner,
             repo: context.repo.repo,
             title: "${{ env.build_name }} Workflow ${{ github.run_number }} Failed! ",
